--- a/package.json
+++ b/package.json
@@ -10,6 +10,15 @@
   "license": "ISC",
   "dependencies": {
     "angular": "^1.4.9",
-    "bootstrap": "^3.3.6"
+    "angular-router": "0.0.2",
+    "bootstrap": "^3.3.6",
+    "event-stream": "^3.3.2",
+    "gulp": "^3.9.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-less": "^3.0.5",
+    "gulp-print": "^2.0.1",
+    "less-plugin-autoprefix": "^1.5.1",
+    "less-plugin-clean-css": "^1.5.1",
+    "path": "^0.12.7"
   }
 }
