--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp-concat": "^2.6.0",
     "gulp-less": "^3.0.5",
     "gulp-print": "^2.0.1",
+    "gulp-uglify": "^1.5.1",
     "less-plugin-autoprefix": "^1.5.1",
     "less-plugin-clean-css": "^1.5.1",
     "path": "^0.12.7"
