--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "angular": "^1.4.9",
-    "angular-router": "0.0.2",
+    "angular-route": "^1.4.9",
     "bootstrap": "^3.3.6",
     "event-stream": "^3.3.2",
     "gulp": "^3.9.0",
